--- a/src/components/ListItem/index.css
+++ b/src/components/ListItem/index.css
@@ -1,5 +1,5 @@
 .nuxy-list-item {
-  padding: var(--space-4) var(--space-5);
+  padding: calc(var(--space-4) - 2px) var(--space-5);
   display: flex;
   align-items: center;
   justify-content: space-between;
